# Hiperspace

./: .gitignore  20250710.md  20251023.md  20251115.md  20251203.md  20260117.md  20260401.md  README.md
.github/: FUNDING.yml
.github/upgrades/: dotnet-upgrade-plan.md
Hiperspace/: BaseTypeModel.cs  BrowserSpace.cs  ConcurrentHashSet.cs  CubeDimensionAttribute.cs  Edge.cs  Element.cs  ElementAttribute.cs  Extensions.cs  Functions.cs  HiperSpace.cs  Hiperspace.csproj  IMessage.cs  ISubSpaceEventSink.cs  IndexPathVersion.cs  Node.cs  OnceAttribute.cs  PartitionSpace.cs  SetSpace.cs  ValueGetter.cs  Vector.cs  VectorSpace.cs  readme.md
Hiperspace.Rocks/: CacheRockSpace.cs  readme.md
Hiperspace/Graph/: HiperEdge.cs  Rule.cs
Hiperspace/Meta/: Alias.cs  Element.cs  Field.cs  MapElement.cs  MetaMap.cs  MetaModelException.cs  Relation.cs
Sparx MDG/: hilang.xml
VSIX/HiLang Item/: Domain.hilang  HiLang Item.csproj  HiLang Item.vstemplate
VSIX/HiLang Project/: Domain.hilang  HiLang Project.csproj  HiLang Project.sln  HiLang_ProjectPackage.cs  licence.txt  source.extension.vsixmanifest
cpp/rockshare/: CMakeLists.txt  CMakePresets.json  build.ninja  cmake_install.cmake  vcpkg-configuration.json  vcpkg.json
cpp/rockshare/include/: HipException.h  HipServer.h  RockSpace.h  SpaceConnection.h  SpacePool.h  Token.h  areacall.h  rockshare.h
cpp/rockshare/proto/: CMakeLists.txt  Hiperspace.proto  cmake_install.cmake
cpp/rockshare/src/: HipServer.cpp  RockSpace.cpp  SpaceConnection.cpp  SpacePool.cpp  SparePool.cpp  rockshare.cpp
doc/: Hiperspace.eapx  Hiperspace.ldb  blank.html  index.html
doc/EARoot/: EA1.html  EA10.html  EA11.html  EA12.html  EA13.html  EA14.html  EA15.html  EA16.html  EA17.html  EA18.html  EA19.html  EA20.html  EA21.html  EA22.html  EA23.html  EA24.html  EA25.html  EA26.html  EA27.html  EA28.html  EA29.html  EA3.html  EA30.html  EA31.html  EA32.html  EA33.html  EA34.html  EA35.html  EA36.html  EA37.html  EA38.html  EA39.html  EA4.html  EA40.html  EA41.html  EA42.html  EA43.html  EA44.html  EA45.html  EA46.html  (+7 more)
doc/css/: ea.css
examples/: Directory.Packages.props  Hiperspace.examples.sln  output.txt
examples/Account/: AccSpace.cs  Account-cube.md  Account-graph.md  Account-physical.md  Account.csproj  Account.hilang  Account.md  ServerFunctions.cs  Totals.cs  globals.cs  readme-cube.md  readme-graph.md  readme-physical.md  readme.md
examples/Account.Test/: Account.Test.fsproj  Tests.fs
examples/CodePath/: CodePath  CodePath.csproj  CodePath.hilang  CodePath.md  CodePath.xmi  CodePath.xml  cube-CodePath  graph-CodePath  physical-CodePath
examples/CodePath.Test/: CodePath.Test.csproj  TestSequence.cs
examples/CousinProblem/: .$cousins.svg.bkp  (+13 more)
src/: 20250701.md  20250710.md  20250728.md  20250807.md  20250923.md  20251106.md  20251124.md  20251210.md  20251231.md  20260227.md  20260415.md  Directory.Packages.props  DurableType.md  Hiperspace.sln  azure-pipelines.yml  version.json
(+8974 files in other folders)
